--- a/pom.xml
+++ b/pom.xml
@@ -36,5 +36,15 @@
 		<artifactId>jsoup</artifactId>
 		<version>1.15.2</version>
 	</dependency>
+	<dependency>
+		<groupId>org.seleniumhq.selenium</groupId>
+		<artifactId>selenium-java</artifactId>
+		<version>4.0.0</version>
+	</dependency>
+	<dependency>
+		<groupId>io.github.bonigarcia</groupId>
+		<artifactId>webdrivermanager</artifactId>
+		<version>5.2.3</version>
+	</dependency>
   </dependencies>
 </project>
